--- a/app/client/src/locales/el.json
+++ b/app/client/src/locales/el.json
@@ -109,16 +109,22 @@
   "Close on exit": "Κλείσιμο κατά την έξοδο",
   "Settings saved!": "Οι ρυθμίσεις αποθηκεύτηκαν!",
   "Available only in Electron version!": "Διαθέσιμο μόνο στην έκδοση Electron!",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Crossfade (ms)": "Μίξη ομαλής μετάβασης (ms)",
+  "Select primary color": "Επιλογή κύριου χρώματος",
+  "Light theme": "Φωτεινό θέμα",
+  "Create folders for playlists": "Δημιουργία φακέλων για λίστες αναπαραγωγής",
+  "About": "Σχετικά",
+  "Links:": "Σύνδεσμοι:",
+  "Telegram Releases": "Κυκλοφορίες Telegram",
+  "Telegram Group": "Ομάδα Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree"
+  "Telegram Android Group": "Ομάδα Android Telegram",
+  "Credits:": "Συντελεστές:",
+  "Agree": "Αποδοχή",
+  "Dismiss": "Απόρριψη",
+  "Added to playlist!": "Προστέθηκε σε λίστα αναπαραγωγής!",
+  "Added to library!": "Προστέθηκε στη βιβλιοθήκη!",
+  "Removed from library!": "Καταργήθηκε από τη βιβλιοθήκη!",
+  "Removed from playlist!": "Καταργήθηκε από τη λίστα αναπαραγωγής!",
+  "Playlist deleted!": "Η λίστα αναπαραγωγής διαγράφηκε!"
 }
