--- a/app/client/src/locales/es.json
+++ b/app/client/src/locales/es.json
@@ -1,44 +1,44 @@
 {
   "Home": "Inicio",
-  "Browse": "Browse",
+  "Browse": "Explorar",
   "Library": "Biblioteca",
-  "Tracks": "Canciones",
+  "Tracks": "Pistas",
   "Playlists": "Listas de reproducción",
   "Albums": "Álbumes",
   "Artists": "Artistas",
   "More": "Más",
-  "Settings": "Configuración",
+  "Settings": "Ajustes",
   "Downloads": "Descargas",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Busca o pega la URL de Deezer. Usa \"/\" para empezar a buscar.",
   "Play": "Reproducir",
-  "Add to library": "Add to library",
+  "Add to library": "Añadir a la biblioteca",
   "Download": "Descargar",
   "fans": "seguidores",
-  "tracks": "canciones",
+  "tracks": "pistas",
   "Quality": "Calidad",
   "Estimated size:": "Tamaño estimado:",
-  "Start downloading": "Start downloading",
+  "Start downloading": "Comenzar descarga",
   "Cancel": "Cancelar",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
+  "Stream logging is disabled!": "¡El registro de reproducción está deshabilitado!",
+  "Enable it in settings for history to work properly.": "Habilítalo en los ajustes para que el historial funcione correctamente.",
   "History": "Historial",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "CANCIONES",
+  "Create new playlist": "Crear nueva lista de reproducción",
+  "TRACKS": "PISTAS",
   "Sort by": "Ordenar por",
   "Date Added": "Fecha de adición",
   "Name (A-Z)": "Nombre (A-Z)",
   "Artist (A-Z)": "Artista (A-Z)",
   "Album (A-Z)": "Álbum (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
+  "Error loading lyrics or lyrics not found!": "¡Error al cargar letras o no encontradas!",
   "Create playlist": "Crear lista de reproducción",
   "Create": "Crear",
   "Add to playlist": "Agregar a la lista de reproducción",
   "Create new": "Crear nuevo",
   "Remove": "Quitar",
   "Play next": "Reproducir siguiente",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
+  "Add to queue": "Añadir a la cola de reproducción",
+  "Remove from library": "Eliminar de la biblioteca",
+  "Remove from playlist": "Quitar de la lista de reproducción",
   "Play track mix": "Reproducir mezcla de canciones",
   "Go to": "Ir a",
   "Track Mix": "Mezcla de canciones",
@@ -49,7 +49,7 @@
   "Play top": "Reproducir top",
   "Radio": "Radio",
   "Show all albums": "Mostrar todos los álbumes",
-  "Show all singles": "Show all singles",
+  "Show all singles": "Mostrar todos los singles",
   "Show more": "Mostrar más",
   "Downloaded": "Descargadas",
   "Queue": "Cola",
@@ -57,59 +57,59 @@
   "Stop": "Parar",
   "Start": "Iniciar",
   "Show folder": "Mostrar carpeta",
-  "Clear queue": "Limpiar cola",
-  "Playing from": "Playing from",
-  "Info": "Información",
+  "Clear queue": "Limpiar lista",
+  "Playing from": "Reproduciendo desde",
+  "Info": "Info",
   "Lyrics": "Letras",
   "Track number": "Número de la canción",
   "Disk number": "Número del disco",
   "Explicit": "Explícito",
   "Source": "Fuente",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
+  "Error logging in!": "¡Error al iniciar sesión!",
+  "Please try again later, or try another account.": "Por favor, inténtalo de nuevo más tarde, o prueba con otra cuenta.",
   "Logout": "Cerrar sesión",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Login using browser": "Iniciar sesión con navegador",
+  "Please login using your Deezer account:": "Por favor, inicia sesión con tu cuenta de Deezer:",
+  "...or paste your ARL/Token below:": "...o pega tu ARL/Token a continuación:",
   "ARL/Token": "ARL/Token",
-  "Login": "Ingresar",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
+  "Login": "Iniciar sesión",
+  "By using this program, you disagree with Deezer's ToS.": "Al usar este programa, usted no está de acuerdo con los Términos de Servicio de Deezer.",
+  "Only in Electron version!": "¡Sólo en la versión Electron!",
+  "Search results for:": "Resultados de la búsqueda para:",
+  "Error loading data!": "¡Error al cargar datos!",
+  "Try again later!": "¡Inténtalo más tarde!",
   "Search": "Buscar",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
+  "Streaming Quality": "Calidad de reproducción",
+  "Download Quality": "Calidad de descarga",
+  "Downloads Directory": "Carpeta de descargas",
+  "Simultaneous downloads": "Descargas simultaneas máximas",
+  "Always show download confirm dialog before downloading.": "Mostrar siempre una confirmación de descarga antes de descargar.",
+  "Show download dialog": "Mostrar diálogo de descargas",
+  "Create folders for artists": "Crear carpetas por artistas",
+  "Create folders for albums": "Crear carpetas por álbumes",
   "Download lyrics": "Descargar letras",
   "Variables": "Variables",
-  "UI": "IU",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Registrar la canción que escucha a Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
+  "UI": "Interfaz de Usuario",
+  "Show autocomplete in search": "Mostrar autocompletado al buscar",
+  "Integrations": "Integraciones",
+  "This allows listening history, flow and recommendations to work properly.": "Esto permite registrar el historial, para que flow y las recomendaciones funcionen correctamente.",
+  "Log track listens to Deezer": "Enviar registro de reproducción a Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Conecta tu cuenta de LastFM para permitir sincronizar tus canciones.",
   "Login with LastFM": "Iniciar sesión con LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
+  "Disconnect LastFM": "Desconectar LastFM",
+  "Requires restart to apply!": "¡Requiere reiniciar para aplicar!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "¡Activar Rich Presence de Discord requiere reiniciar para cambiar!",
+  "Discord Rich Presence": "Rich Presence de Discord",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activar el botón de unión de Discord para sincronizar las canciones, ¡requiere reiniciar para cambiarlo!",
-  "Discord Join Button": "Discord Join Button",
+  "Discord Join Button": "Botón Unirse en Discord",
   "Other": "Otro",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
+  "Minimize to tray": "Minimizar a la bandeja del sistema",
+  "Don't minimize to tray": "No minimizar a la bandeja del sistema",
+  "Close on exit": "Cerrar al salir",
   "Settings saved!": "¡Configuraciones guardadas!",
-  "Available only in Electron version!": "Available only in Electron version!",
-  "Crossfade (ms)": "Desvanecimiento (ms)",
+  "Available only in Electron version!": "¡Disponible sólo en la versión Electron!",
+  "Crossfade (ms)": "Transición (ms)",
   "Select primary color": "Seleccionar color primario",
   "Light theme": "Tema claro",
   "Create folders for playlists": "Crear carpetas para listas de reproducción",
@@ -120,5 +120,11 @@
   "Discord": "Discord",
   "Telegram Android Group": "Grupo de Android en Telegram",
   "Credits:": "Créditos:",
-  "Agree": "Acepto"
+  "Agree": "Acepto",
+  "Dismiss": "Dismiss",
+  "Added to playlist!": "Added to playlist!",
+  "Added to library!": "Added to library!",
+  "Removed from library!": "Removed from library!",
+  "Removed from playlist!": "Removed from playlist!",
+  "Playlist deleted!": "Playlist deleted!"
 }
