--- a/app/client/src/locales/id.json
+++ b/app/client/src/locales/id.json
@@ -110,15 +110,21 @@
   "Settings saved!": "Pengaturan tersimpan!",
   "Available only in Electron version!": "Hanya tersedia di versi Electron!",
   "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Select primary color": "Pilih warna utama",
+  "Light theme": "Tema cerah",
+  "Create folders for playlists": "Buat folder untuk daftar putar",
+  "About": "Tentang",
+  "Links:": "Tautan:",
+  "Telegram Releases": "Telegram Rilis",
+  "Telegram Group": "Telegram Grub",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree"
+  "Telegram Android Group": "Telegram Grub Android",
+  "Credits:": "Kredit:",
+  "Agree": "Setuju",
+  "Dismiss": "Dismiss",
+  "Added to playlist!": "Added to playlist!",
+  "Added to library!": "Added to library!",
+  "Removed from library!": "Removed from library!",
+  "Removed from playlist!": "Removed from playlist!",
+  "Playlist deleted!": "Playlist deleted!"
 }
