--- a/app/client/src/locales/pl.json
+++ b/app/client/src/locales/pl.json
@@ -39,7 +39,7 @@
   "Add to queue": "Dodaj do kolejki",
   "Remove from library": "Usuń z biblioteki",
   "Remove from playlist": "Usuń z playlisty",
-  "Play track mix": "Odtwórz mieszane utwory",
+  "Play track mix": "Odtwarzaj losowo",
   "Go to": "Przejdź do",
   "Track Mix": "Mieszaj utwory",
   "Duration": "Czas trwania",
@@ -102,7 +102,7 @@
   "Enable Discord Rich Presence, requires restart to toggle!": "Włącz Szczegółowy Widok Discord, wymaga ponownego uruchomienia!",
   "Discord Rich Presence": "Discord Rich Presence",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Włącz w Discordzie przycisk dołączenia, aby synchronizować utwory, wymaga ponownego uruchomienia!",
-  "Discord Join Button": "Przycisk dołączenia Discord",
+  "Discord Join Button": "Pokaż przycisk dołączenia do Discord",
   "Other": "Inne",
   "Minimize to tray": "Minimalizuj do zasobnika",
   "Don't minimize to tray": "Nie minimalizuj do zasobnika",
@@ -110,15 +110,21 @@
   "Settings saved!": "Ustawienia zapisane!",
   "Available only in Electron version!": "Dostępne tylko w wersji Electron!",
   "Crossfade (ms)": "Przejście (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Select primary color": "Wybierz podstawowy kolor",
+  "Light theme": "Wybierz jasny motyw",
+  "Create folders for playlists": "Utwórz folder dla playlist",
+  "About": "O programie",
+  "Links:": "Adresy:",
+  "Telegram Releases": "Nowe wydania w Telegram",
+  "Telegram Group": "Grupa w Telegramie",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree"
+  "Telegram Android Group": "Grupa Telegram dla wydań na Android",
+  "Credits:": "Twórcy:",
+  "Agree": "Akceptuję",
+  "Dismiss": "Dismiss",
+  "Added to playlist!": "Added to playlist!",
+  "Added to library!": "Added to library!",
+  "Removed from library!": "Removed from library!",
+  "Removed from playlist!": "Removed from playlist!",
+  "Playlist deleted!": "Playlist deleted!"
 }
