--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -49,34 +49,34 @@
   "Play top": "Reproduzir no topo",
   "Radio": "Rádio",
   "Show all albums": "Mostrar todos os álbuns",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
+  "Show all singles": "Mostrar todas as músicas",
+  "Show more": "Mostrar mais",
+  "Downloaded": "Baixados",
+  "Queue": "Fila de Reprodução",
   "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
-  "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Stop": "Parar",
+  "Start": "Começar",
+  "Show folder": "Mostrar pastas",
+  "Clear queue": "Limpar lista",
+  "Playing from": "Reproduzindo de",
+  "Info": "Informações",
+  "Lyrics": "Letras",
+  "Track number": "Número de faixa",
+  "Disk number": "Numero de disco",
+  "Explicit": "Explicito",
+  "Source": "Fonte",
+  "ID": "Identificação",
+  "Error logging in!": "Erro de login!",
+  "Please try again later, or try another account.": "Por favor, tente novamente mais tarde ou tente outra conta.",
+  "Logout": "Encerrar sessão",
+  "Login using browser": "Login usando o navegador",
+  "Please login using your Deezer account:": "Faça login usando sua conta do Deezer:",
+  "...or paste your ARL/Token below:": "...ou cole seu ARL/Token abaixo:",
   "ARL/Token": "ARL/Token",
   "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
+  "By using this program, you disagree with Deezer's ToS.": "Ao usar este programa, você discorda do Acordo de Assinatura do Deezer.",
+  "Only in Electron version!": "Apenas na versão do Electron!",
+  "Search results for:": "Buscar resultados para:",
   "Error loading data!": "Error loading data!",
   "Try again later!": "Try again later!",
   "Search": "Search",
@@ -98,7 +98,7 @@
   "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
   "Login with LastFM": "Login with LastFM",
   "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
+  "Requires restart to apply!": "Requer reinicialização do aplicativo para aplicar!",
   "Enable Discord Rich Presence, requires restart to toggle!": "Ativar o Rich Presence do Discord, requer reiniciar para alternar!",
   "Discord Rich Presence": "Habilitar o Discord",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Ativar o botão de adesão do Discord para sincronizar faixas requer reinicialização para alternar!",
@@ -120,5 +120,11 @@
   "Discord": "Discord",
   "Telegram Android Group": "Grupo Android do Telegram",
   "Credits:": "Créditos:",
-  "Agree": "Concordo"
+  "Agree": "Concordo",
+  "Dismiss": "Dismiss",
+  "Added to playlist!": "Added to playlist!",
+  "Added to library!": "Added to library!",
+  "Removed from library!": "Removed from library!",
+  "Removed from playlist!": "Removed from playlist!",
+  "Playlist deleted!": "Playlist deleted!"
 }
