--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -63,7 +63,7 @@
   "Lyrics": "Текст",
   "Track number": "Номер треку",
   "Disk number": "Номер диску",
-  "Explicit": "Явний",
+  "Explicit": "Докладно",
   "Source": "Джерело",
   "ID": "ID",
   "Error logging in!": "Помилка входу!",
@@ -75,7 +75,7 @@
   "ARL/Token": "ARL/токен",
   "Login": "Увійти",
   "By using this program, you disagree with Deezer's ToS.": "Використовуючи цю програму, ви не погоджуєтесь із умовами використання Deezer.",
-  "Only in Electron version!": "Тільки в Electron версії!",
+  "Only in Electron version!": "Тільки в версії Electron!",
   "Search results for:": "Результати пошуку для:",
   "Error loading data!": "Помилка завантаження даних!",
   "Try again later!": "Повторіть спробу пізніше!",
@@ -90,18 +90,18 @@
   "Create folders for albums": "Створити теки для альбомів",
   "Download lyrics": "Завантажити тексти пісень",
   "Variables": "Змінні",
-  "UI": "UI",
-  "Show autocomplete in search": "Показувати автозаповнення при пошуку",
+  "UI": "Інтерфейс користувача",
+  "Show autocomplete in search": "Автозаповнення при пошуку",
   "Integrations": "Інтеграція",
-  "This allows listening history, flow and recommendations to work properly.": "Це дозволяє слухати історію, потік та рекомендації для правильної роботи.",
-  "Log track listens to Deezer": "Реєстр треків Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Підключіть обліковий запис LastFM, щоб дозволити скроблінг.",
+  "This allows listening history, flow and recommendations to work properly.": "Для правильної роботи Flow, рекомендацій та історії.",
+  "Log track listens to Deezer": "Відправляти статистику",
+  "Connect your LastFM account to allow scrobbling.": "Підключити обліковий запис LastFM, щоб дозволити scrobbling.",
   "Login with LastFM": "Увійти через LastFM",
   "Disconnect LastFM": "Від'єднати LastFM",
   "Requires restart to apply!": "Необхідно перезапустити для застосування!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Увімкнути Discord Rich Presence, для використання необхідний перезапуск!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Увімкнути Discord Rich Presence, для застосування потрібен перезапуск!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Увімкніть кнопку приєднання Discord для синхронізації треків, для застосування потрібен перезапуск!",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Увімкнути приєднання до Discord для синхронізації треків, для застосування потрібен перезапуск!",
   "Discord Join Button": "Кнопка приєднання до Discord",
   "Other": "Інше",
   "Minimize to tray": "Згорнути в трей",
@@ -110,15 +110,21 @@
   "Settings saved!": "Налаштування збережено!",
   "Available only in Electron version!": "Доступно лише в Electron версії!",
   "Crossfade (ms)": "Перехресне затухання (мс)",
-  "Select primary color": "Виберіть основний колір",
+  "Select primary color": "Вибрати основний колір",
   "Light theme": "Світла тема",
   "Create folders for playlists": "Створити теки для плейлистів",
   "About": "Про додаток",
-  "Links:": "Посилання:",
+  "Links:": "Лінки:",
   "Telegram Releases": "Telegram релізи",
   "Telegram Group": "Група в Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Група Андроїд Telegram",
+  "Telegram Android Group": "Група Android в Telegram",
   "Credits:": "Автори:",
-  "Agree": "Погоджуюсь"
+  "Agree": "Погоджуюсь",
+  "Dismiss": "Dismiss",
+  "Added to playlist!": "Added to playlist!",
+  "Added to library!": "Added to library!",
+  "Removed from library!": "Removed from library!",
+  "Removed from playlist!": "Removed from playlist!",
+  "Playlist deleted!": "Playlist deleted!"
 }
