--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -9,36 +9,36 @@
   "More": "Továbbiak",
   "Settings": "Beállítások",
   "Downloads": "Letöltések",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Keressen, vagy illesszen be Deezer URL linket. Használja a \"/\" karaktert, hogy gyorsan ősszpontosítson.",
+  "Play": "Lejátszás",
+  "Add to library": "Hozzáadás a könyvtárhoz",
+  "Download": "Letöltés",
+  "fans": "rajongók",
+  "tracks": "dalok",
+  "Quality": "Minőség",
+  "Estimated size:": "Becsült fájl méret:",
+  "Start downloading": "Letöltés indítása",
+  "Cancel": "Mégse",
+  "Stream logging is disabled!": "Stream naplózás le van tiltva!",
+  "Enable it in settings for history to work properly.": "Engedélyezze a beállításokban, hogy az előzmények megfelelően működjenek.",
+  "History": "Előzmények",
+  "Create new playlist": "Új lejátszási lista létrehozása",
+  "TRACKS": "DALOK",
+  "Sort by": "Rendezési elv",
+  "Date Added": "Hozzáadás dátuma",
+  "Name (A-Z)": "Név (A-Z)",
+  "Artist (A-Z)": "Előadó (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
+  "Error loading lyrics or lyrics not found!": "Hiba a dalszöveg betöltésekor, vagy nem található dalszöveg!",
+  "Create playlist": "Lejátszási lista létrehozása",
+  "Create": "Létrehozás",
+  "Add to playlist": "Hozzáadás a lejátszási listához",
+  "Create new": "Új létrehozása",
+  "Remove": "Eltávolítás",
+  "Play next": "Következő lejátszása",
+  "Add to queue": "Hozzáadás a várólistához",
+  "Remove from library": "Eltávolítás a könyvtárból",
+  "Remove from playlist": "Eltávolítás a lejátszási listáról",
   "Play track mix": "Play track mix",
   "Go to": "Go to",
   "Track Mix": "Track Mix",
@@ -126,5 +126,7 @@
   "Added to library!": "Added to library!",
   "Removed from library!": "Removed from library!",
   "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!"
+  "Playlist deleted!": "Playlist deleted!",
+  "Delete": "Delete",
+  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
 }
