--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -110,21 +110,23 @@
   "Settings saved!": "Настройки сохранены!",
   "Available only in Electron version!": "Доступно только в версии на Electron!",
   "Crossfade (ms)": "Кроссфейд (мс)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Select primary color": "Выберите основной цвет",
+  "Light theme": "Светлая тема",
+  "Create folders for playlists": "Создавать папки для плейлистов",
+  "About": "О приложении",
+  "Links:": "Ссылки:",
+  "Telegram Releases": "Релизы в Telegram",
+  "Telegram Group": "Группа в Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
+  "Telegram Android Group": "Обсуждение Freezer Android",
+  "Credits:": "Благодарность:",
   "Agree": "Agree",
   "Dismiss": "Dismiss",
   "Added to playlist!": "Added to playlist!",
   "Added to library!": "Added to library!",
   "Removed from library!": "Removed from library!",
   "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!"
+  "Playlist deleted!": "Playlist deleted!",
+  "Delete": "Delete",
+  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
 }
