--- a/app/client/src/locales/fil.json
+++ b/app/client/src/locales/fil.json
@@ -25,7 +25,7 @@
   "Create new playlist": "Gumawa ng bagong playlist",
   "TRACKS": "TRACKS",
   "Sort by": "Sort by",
-  "Date Added": "Date Added",
+  "Date Added": "Petsa kung kailan idinagdag",
   "Name (A-Z)": "Name (A-Z)",
   "Artist (A-Z)": "Artista (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
@@ -60,7 +60,7 @@
   "Clear queue": "Clear queue",
   "Playing from": "Playing from",
   "Info": "Info",
-  "Lyrics": "Lyrics",
+  "Lyrics": "Liriko",
   "Track number": "Track number",
   "Disk number": "Disk number",
   "Explicit": "Explicit",
@@ -110,13 +110,13 @@
   "Settings saved!": "Na-save ang settings!",
   "Available only in Electron version!": "Meron lamang sa Electron version!",
   "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
+  "Select primary color": "Pumili ng pangunahing kulay",
+  "Light theme": "Maliwanag na tema",
+  "Create folders for playlists": "Gumawa ng folder para sa mga playlist",
   "About": "About",
   "Links:": "Links:",
   "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Telegram Group": "Grupo sa Telegram",
   "Discord": "Discord",
   "Telegram Android Group": "Telegram Android Group",
   "Credits:": "Credits:",
@@ -126,5 +126,7 @@
   "Added to library!": "Added to library!",
   "Removed from library!": "Removed from library!",
   "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!"
+  "Playlist deleted!": "Playlist deleted!",
+  "Delete": "Delete",
+  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
 }
