--- a/app/client/src/locales/fr.json
+++ b/app/client/src/locales/fr.json
@@ -9,9 +9,9 @@
   "More": "Plus",
   "Settings": "Paramètres",
   "Downloads": "Téléchargements",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Recherchez ou collez une URL Deezer. Utilisez \"/\" pour lancer rapidement la recherche.",
+  "Play": "Lire",
+  "Add to library": "Ajouter à la bibliothèque",
   "Download": "Télécharger",
   "fans": "fans",
   "tracks": "pistes",
@@ -19,8 +19,8 @@
   "Estimated size:": "Durée estimée:",
   "Start downloading": "Lancer le téléchargement",
   "Cancel": "Annuler",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
+  "Stream logging is disabled!": "La journalisation du stream est désactivée !",
+  "Enable it in settings for history to work properly.": "Activez-le dans les paramètres pour que l'historique fonctionne correctement.",
   "History": "Historique",
   "Create new playlist": "Créer une nouvelle playlist",
   "TRACKS": "PISTES",
@@ -29,44 +29,44 @@
   "Name (A-Z)": "Nom (A-Z)",
   "Artist (A-Z)": "Artiste (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
+  "Error loading lyrics or lyrics not found!": "Erreur lors du chargement des paroles ou paroles introuvables !",
   "Create playlist": "Créer une playlist",
   "Create": "Créer",
   "Add to playlist": "Ajouter à une playlist",
-  "Create new": "Create new",
+  "Create new": "Créer un nouveau",
   "Remove": "Supprimer",
-  "Play next": "Play next",
+  "Play next": "Lire juste après",
   "Add to queue": "Ajouter à la file d'attente",
   "Remove from library": "Supprimer de la bibliothèque",
   "Remove from playlist": "Supprimer de la playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
+  "Play track mix": "Jouer un mélange de pistes",
+  "Go to": "Aller à",
+  "Track Mix": "Mélange de piste",
   "Duration": "Durée",
-  "Released": "Released",
+  "Released": "Publié",
   "Disk": "Disque",
   "albums": "albums",
-  "Play top": "Play top",
+  "Play top": "Lire en haut",
   "Radio": "Radio",
   "Show all albums": "Afficher tous les albums",
   "Show all singles": "Afficher tous les singles",
   "Show more": "Afficher plus",
   "Downloaded": "Téléchargés",
-  "Queue": "Queue",
+  "Queue": "File d'attente",
   "Total": "Total",
   "Stop": "Arrêter",
-  "Start": "Start",
+  "Start": "Début",
   "Show folder": "Afficher le dossier",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
+  "Clear queue": "Effacer la liste d'attente",
+  "Playing from": "Lecture depuis",
+  "Info": "Infos",
+  "Lyrics": "Paroles",
+  "Track number": "Numéro de piste",
+  "Disk number": "Numéro de disque",
+  "Explicit": "Explicite",
   "Source": "Source",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
+  "Error logging in!": "Erreur de connexion !",
   "Please try again later, or try another account.": "Veuillez réessayer plus tard, ou essayez avec un autre compte.",
   "Logout": "Déconnexion",
   "Login using browser": "Connexion via navigateur",
@@ -74,57 +74,59 @@
   "...or paste your ARL/Token below:": "...ou copiez votre ARL/Token ici:",
   "ARL/Token": "ARL/Token",
   "Login": "Connexion",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
+  "By using this program, you disagree with Deezer's ToS.": "En utilisant ce programme, vous désagréez avec les conditions générales d'utilisation et de vente de Deezer.",
   "Only in Electron version!": "Uniquement en version Electron !",
   "Search results for:": "Résultats de la recherche pour:",
-  "Error loading data!": "Error loading data!",
+  "Error loading data!": "Erreur lors du chargement des données !",
   "Try again later!": "Réessayez plus tard !",
   "Search": "Recherche",
   "Streaming Quality": "Qualité en streaming",
   "Download Quality": "Qualité de téléchargement",
   "Downloads Directory": "Chemin de sauvegarde",
   "Simultaneous downloads": "Limite téléchargements simultanés",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
+  "Always show download confirm dialog before downloading.": "Toujours afficher une boîte de dialogue pour confirmer le téléchargement avant de le commencer.",
+  "Show download dialog": "Afficher une boîte de dialogue pour chaque téléchargement",
   "Create folders for artists": "Générer des dossiers par artiste",
   "Create folders for albums": "Générer des dossiers par album",
   "Download lyrics": "Télécharger les paroles",
   "Variables": "Variables",
   "UI": "Interface",
-  "Show autocomplete in search": "Show autocomplete in search",
+  "Show autocomplete in search": "Afficher la saisie automatique dans la recherche",
   "Integrations": "Intégrations",
-  "This allows listening history, flow and recommendations to work properly.": "Cela permet à l'historique des titres écoutés, flow et aux recommandations de fonctionner correctement.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
+  "This allows listening history, flow and recommendations to work properly.": "Cela permet à l'historique des titres écoutés, au flow et aux recommandations de fonctionner correctement.",
+  "Log track listens to Deezer": "Journaliser la piste écoutée sur Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Connectez votre compte LastFM pour autoriser le scrobbling.",
+  "Login with LastFM": "Se connecter avec LastFM",
+  "Disconnect LastFM": "Déconnecté LastFM",
   "Requires restart to apply!": "Redémarrage nécessaire pour prendre effet !",
   "Enable Discord Rich Presence, requires restart to toggle!": "Activer la présence Discord, nécessite un redémarrage pour prendre effet !",
-  "Discord Rich Presence": "Présence Discord",
+  "Discord Rich Presence": "Présence sur Discord",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activer le bouton \"rejoindre\" sur Discord pour synchroniser les pistes, nécessite un redémarrage pour prendre effet !",
   "Discord Join Button": "Bouton rejoindre sur Discord",
   "Other": "Autre",
   "Minimize to tray": "Réduire dans la zone de notification",
   "Don't minimize to tray": "Ne pas réduire dans la zone de notification",
-  "Close on exit": "Close on exit",
+  "Close on exit": "Fermer en quittant",
   "Settings saved!": "Paramètres sauvegardés !",
   "Available only in Electron version!": "Uniquement disponible en version Electron !",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Crossfade (ms)": "Fondu enchaîné (ms)",
+  "Select primary color": "Sélectionner la couleur principale",
+  "Light theme": "Thème clair",
+  "Create folders for playlists": "Créer des dossiers par playlist",
+  "About": "À propos",
+  "Links:": "Liens:",
+  "Telegram Releases": "Publications Telegram",
+  "Telegram Group": "Groupe Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!"
+  "Telegram Android Group": "Groupe Telegram Android",
+  "Credits:": "Crédits:",
+  "Agree": "Accepter",
+  "Dismiss": "Cacher",
+  "Added to playlist!": "Ajouté à la playlist !",
+  "Added to library!": "Ajouté à la bibliothèque !",
+  "Removed from library!": "Supprimé de la bibliothèque !",
+  "Removed from playlist!": "Supprimé de la playlist !",
+  "Playlist deleted!": "Playlist supprimée !",
+  "Delete": "Supprimer",
+  "Are you sure you want to delete this playlist?": "Voulez-vous vraiment supprimer cette liste de lecture ?"
 }
