--- a/app/client/src/locales/hi.json
+++ b/app/client/src/locales/hi.json
@@ -126,5 +126,7 @@
   "Added to library!": "Added to library!",
   "Removed from library!": "Removed from library!",
   "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!"
+  "Playlist deleted!": "Playlist deleted!",
+  "Delete": "Delete",
+  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
 }
