--- a/app/client/src/locales/pl.json
+++ b/app/client/src/locales/pl.json
@@ -121,10 +121,12 @@
   "Telegram Android Group": "Grupa Telegram dla wydań na Android",
   "Credits:": "Twórcy:",
   "Agree": "Akceptuję",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!"
+  "Dismiss": "Odrzuć",
+  "Added to playlist!": "Dodano do playlisty!",
+  "Added to library!": "Dodano do biblioteki!",
+  "Removed from library!": "Usunięto z biblioteki!",
+  "Removed from playlist!": "Usunięto z playlisty!",
+  "Playlist deleted!": "Playlista została usunięta!",
+  "Delete": "Delete",
+  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
 }
