--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -46,7 +46,7 @@
   "Released": "Реліз",
   "Disk": "Диск",
   "albums": "альбоми",
-  "Play top": "Грати зверху",
+  "Play top": "Відтворити top",
   "Radio": "Радіо",
   "Show all albums": "Показати всі альбоми",
   "Show all singles": "Показати всі композиції",
@@ -109,7 +109,7 @@
   "Close on exit": "Закрити при виході",
   "Settings saved!": "Налаштування збережено!",
   "Available only in Electron version!": "Доступно лише в Electron версії!",
-  "Crossfade (ms)": "Перехресне затухання (мс)",
+  "Crossfade (ms)": "Плавний перехід (мс)",
   "Select primary color": "Вибрати основний колір",
   "Light theme": "Світла тема",
   "Create folders for playlists": "Створити теки для плейлистів",
@@ -121,10 +121,12 @@
   "Telegram Android Group": "Група Android в Telegram",
   "Credits:": "Автори:",
   "Agree": "Погоджуюсь",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!"
+  "Dismiss": "Відхилити",
+  "Added to playlist!": "Додано до плейлиста!",
+  "Added to library!": "Додано до бібліотеки!",
+  "Removed from library!": "Видалено з бібліотеки!",
+  "Removed from playlist!": "Видалено з плейлиста!",
+  "Playlist deleted!": "Плейлист видалено!",
+  "Delete": "Delete",
+  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
 }
