--- a/app/client/src/locales/sk.json
+++ b/app/client/src/locales/sk.json
@@ -8,18 +8,18 @@
   "Artists": "Umelci",
   "More": "Viac",
   "Settings": "Nastavenia",
-  "Downloads": "K stiahnutiu",
+  "Downloads": "Na stiahnutie",
   "Search or paste Deezer URL. Use / to quickly focus.": "Vyhľadať alebo vložiť Deezer URL. Použite \"/\" pre rýchly náhľad.",
   "Play": "Prehrať",
   "Add to library": "Pridať do knižnice",
   "Download": "Stiahnuť",
-  "fans": "fanúšikovia",
-  "tracks": "skladby",
+  "fans": "fanúšikov",
+  "tracks": "skladieb",
   "Quality": "Kvalita",
   "Estimated size:": "Odhadovaná veľkosť:",
   "Start downloading": "Začať sťahovať",
   "Cancel": "Zrušiť",
-  "Stream logging is disabled!": "Zaznamenávanie streamu je zakázané!",
+  "Stream logging is disabled!": "Zaznamenávanie histórie pre Deezer je zakázané!",
   "Enable it in settings for history to work properly.": "Povoliť v nastaveniach pre správne fungovanie histórie.",
   "History": "História",
   "Create new playlist": "Vytvoriť nový playlist",
@@ -35,7 +35,7 @@
   "Add to playlist": "Pridať do playlistu",
   "Create new": "Vytvoriť nový",
   "Remove": "Odstrániť",
-  "Play next": "Prehrať ďalšie",
+  "Play next": "Prehrať ako ďalšie",
   "Add to queue": "Pridať do poradia",
   "Remove from library": "Odstrániť z knižnice",
   "Remove from playlist": "Odstrániť z playlistu",
@@ -59,11 +59,11 @@
   "Show folder": "Zobraziť priečinok",
   "Clear queue": "Vyčistiť poradie",
   "Playing from": "Prehráva sa",
-  "Info": "Info",
+  "Info": "Informácie",
   "Lyrics": "Texty",
   "Track number": "Číslo skladby",
   "Disk number": "Číslo disku",
-  "Explicit": "Výslovné",
+  "Explicit": "Pre dospelých",
   "Source": "Zdroj",
   "ID": "ID",
   "Error logging in!": "Chyba prihlásenia!",
@@ -93,8 +93,8 @@
   "UI": "Používateľské rozhranie",
   "Show autocomplete in search": "Automatické dopĺňanie pri vyhľadávaní",
   "Integrations": "Integrácia",
-  "This allows listening history, flow and recommendations to work properly.": "Umožňuje správne fungovanie histórie, flow a odporúčaní počúvania.",
-  "Log track listens to Deezer": "Zaznamenávia počúvania pre Deezer",
+  "This allows listening history, flow and recommendations to work properly.": "Umožňuje správne fungovanie histórie, flow a odporúčaných skladieb.",
+  "Log track listens to Deezer": "Zaznamenávanie histórie pre Deezer",
   "Connect your LastFM account to allow scrobbling.": "Pripojte sa na váš LastFM účet pre použitie scrobblingu.",
   "Login with LastFM": "Prihlásiť s LastFM",
   "Disconnect LastFM": "Odpojiť od LastFM",
@@ -128,5 +128,5 @@
   "Removed from playlist!": "Odstránené z playlistu!",
   "Playlist deleted!": "Playlist odstránený!",
   "Delete": "Odstrániť",
-  "Are you sure you want to delete this playlist?": "Naozaj chcete odstrániť tento zoznam skladieb?"
+  "Are you sure you want to delete this playlist?": "Naozaj chcete odstrániť tento playlist?"
 }
