--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -127,6 +127,6 @@
   "Removed from library!": "Видалено з бібліотеки!",
   "Removed from playlist!": "Видалено з плейлиста!",
   "Playlist deleted!": "Плейлист видалено!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Delete": "Видалити",
+  "Are you sure you want to delete this playlist?": "Ви впевнені, що хочете видалити цей плейлист?"
 }
