--- a/app/client/src/locales/id.json
+++ b/app/client/src/locales/id.json
@@ -127,6 +127,6 @@
   "Removed from library!": "Dihapus dari koleksi!",
   "Removed from playlist!": "Dihapus dari daftar putar!",
   "Playlist deleted!": "Daftar putar dihapus!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Delete": "Hapus",
+  "Are you sure you want to delete this playlist?": "Apakah kamu yakin ingin menghapus daftar putar ini?"
 }
